Start MultipleDictionary implementation for disk generation, fix delta merger, cleanup code, better ByteString handle